added the set up for the js file to be ready for when it loads. added and array for the buttons to be added to

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,4 +10,12 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    font-family: 'Fira Mono', monospace;
+}
+.navbar {
+    border: solid rgb(78, 77, 77) 2px;
+    color: white;
+}
+.btn {
+    color:#352F1A;
 }
