i made so many changes im not even going to try, but ill be better on the group project I SWEAR

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,12 @@ body {
 .navbar {
     border: solid rgb(78, 77, 77) 2px;
     color: white;
+    font-size: 25px;
 }
 .btn {
-    color:#352F1A;
+    color:#8C864D;
+}
+/* changes the color of the new ratings of gifs loaded so that they are visible */
+p {
+    color:#8C864D;
 }
