--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,19 @@
     }
 
 body {
-    background-image: url("../images/gym-background.png");
+    /* background-image: url("../images/gym-background.png");
     background-repeat: no-repeat;
     background-size:960px;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
+    background-size: cover; */
     font-family: 'Fira Mono', monospace;
+    background: url('../images/gym-background.png') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 .navbar {
     border: solid rgb(78, 77, 77) 2px;
